k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brs-production
  labels:
    name: brs-production
    environment: production
    project: brs
